# space

./: .gitignore  LICENSE
docs/: interface-spec.md  requirements-physics.md  requirements-ui.md  requirements.md  setup.md  ui-technical-design.md
engine/: Cargo.toml
engine/src/: lib.rs
src/frontend/: .gitignore  eslint.config.js  package-lock.json  package.json
src/frontend/src/: App.tsx  index.css  main.tsx
src/frontend/src/components/: ControlPanel.tsx  InfoPanel.tsx  SimulationCanvas.tsx  ToastMessageBar.tsx
src/frontend/src/config/: missionConfig.ts  uiConfig.ts
src/frontend/src/hooks/: useWasmGateway.ts
src/frontend/src/layout/: AppLayout.tsx
src/frontend/src/mock/: wasmInterface.ts
src/frontend/src/store/: UiStoreProvider.tsx  uiStore.tsx
src/frontend/wasm/space-wasm/: Cargo.toml
src/frontend/wasm/space-wasm/src/: lib.rs
web/: .gitignore  .prettierrc.json  eslint.config.js  index.html  package-lock.json  package.json
web/src/: camera.ts  engine.ts  input.ts  main.ts  physics.ts  renderer.ts  types.ts
